--- a/contact/templates/contact/contact_form.html
+++ b/contact/templates/contact/contact_form.html
@@ -2,18 +2,28 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class=" col-md-6"></div>
+    </div>
+</div>
+{% endblock %}
+
 {% block content %}
 
 <div class="container-fluid">
-<h2 class="text-center mt-3">Contact Us</h2>
-<p class="text-center mt-3">For any queries</p>
+<h2 class="logo-font text-center">Contact Us</h2>
+<p class="logo-font text-center">For any queries</p>
+ <hr class="w-50 mb-1">
 
-<form method="post" action="{% url 'contact_view' %}"
-    class="col-sm-6 mx-auto">
+<form method="post" action="{% url 'contact_view' %}">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="container btn btn-secondary btn-sm ">Submit</button>
+    <button type="submit"
+        class="container btn btn-secondary btn-sm submit-button justify-content-center">Submit</button>
 </form>
+
     </div>
   </div>
 {% endblock %}
