--- a/contact/templates/contact/success_page.html
+++ b/contact/templates/contact/success_page.html
@@ -2,7 +2,15 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class=" col-md-6"></div>
+    </div>
+</div>
+{% endblock %}
+
 {% block content %}
-<h2>Thank you for contacting us!</h2>
+<h2 class="text-center">Thank you for contacting us! We'll get back to you shortly.</h2>
 
 {% endblock %}
