--- a/exercise_plans/templates/exercise/exercise_plans.html
+++ b/exercise_plans/templates/exercise/exercise_plans.html
@@ -18,24 +18,25 @@
     <div class="row">
         <div class="col text-center mt-3">
             <h2 class="logo-font">Exercise Plans</h2>
+            <p>Click on image to check plan</p>
             <hr class="w-50 mb-1">
         </div>
     </div>
 </div>
-        <div class="container">
+        <div class="grid-container">
             <div class="flex">
                 {% for exercise in exercises %}
                     <div class="exercise-card rounded float-start">
                         {% if exercise.image %}
                             <a href="{% url 'exercise_plans_detail' pk=exercise.pk %}">
-                                <img class="card-img-top img-fluid max-width: 100%; height:100%;
+                                <img class="card-exercise-img-top img-fluid max-width: 100%; height:100%;
                                 auto:100%;"
                                     src="{{ exercise.image.url }}"
                                     alt="{{ exercise.name }}">
                             </a>
                             {% else %}
                             <a href="{% url 'exercise_plans_detail' pk=exercise.pk %}">
-                                <img class="card-img-top img-fluid max-width: 100%; height:100%;
+                                <img class="card-exercise-img-top img-fluid max-width: 100%; height:100%;
                                 auto:100%;" src="{{ MEDIA_URL }}noimage.png"
                                     alt="{{ exercise.name }}">
                             </a>
