--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,10 +1,19 @@
 <!-- blog/templates/blog/post_list.html -->
 {% extends 'base.html' %}
 
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class=" col-md-6"></div>
+    </div>
+</div>
+{% endblock %}
+
 {% block content %}
 
 
-<div class="container-fluid page-top-margin">
+<div class="container-fluid">
+    <a href="{% url 'post_new' %}" class="text-center">Add New Post</a>
     <h2 class="text-center">Blogs</h2>
     <div class="row">
         {% for post in posts %}
@@ -21,4 +30,5 @@
         {% endfor %}
     </div>
 </div>
+
 {% endblock %}
