--- a/nutrition_plans/templates/meals/nutrition_plans.html
+++ b/nutrition_plans/templates/meals/nutrition_plans.html
@@ -39,7 +39,28 @@
                                 <div class="card-body pb-0">
                                     <p class="mb-0">{{ meal.name }}</p>
                                 </div>
-                               
+                                <div class="card-footer bg-white pt-0 border-0 text-left">
+                                    <div class="row">
+                                        <div class="col">
+                                            <p class="lead mb-0 text-left font-weight-bold">${{ meal.price }}</p>
+                                            {% if meal.category %}
+                                            <p class="small mt-1 mb-0">
+                                                <a class="text-muted"
+                                                    href="{% url 'meal' %}?category={{ meal.category.name }}">
+                                                    <i class="fas fa-tag mr-1"></i>{{ meal.category.friendly_name }}
+                                                </a>
+                                            </p>
+                                            {% endif %}
+                                            {% if meal.rating %}
+                                            <small class="text-muted"><i
+                                                    class="fas fa-star mr-1"></i>{{ meal.rating }} /
+                                                5</small>
+                                            {% else %}
+                                            <small class="text-muted">No Rating</small>
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         {% if forloop.counter|divisibleby:1 %}
