Removed price model from nutrition plans

--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-<h1 class="text-center">New Post</h1>
+<h1 class="text-center">Share your Post</h1>
 <div class="d-flex align-items-center justify-content-center" style="height: 100vh;">
 <form method="POST" class="post-form">{% csrf_token %}
     {{ form.as_p }}
