--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -84,7 +84,8 @@
                 <div class="my-5 text-center">
                     <h3>Join Our Community</h3>
                     <h4 class="text-center mt-3"> 
-                        <a href="" class="join-now-button  btn btn-lg rounded-0 text-uppercase py-3">Join Now</a>
+                        <a href="{% url 'account_signup' %}"
+                            class="join-now-button  btn btn-lg rounded-0 text-uppercase py-3">Join Now</a>
                     </h4>
                 </div>
             </div>
