--- a/nutrition_plans/templates/meals/nutrition_plans.html
+++ b/nutrition_plans/templates/meals/nutrition_plans.html
@@ -18,6 +18,7 @@
             <div class="col text-center mt-3">
                 <h2 class="logo-font">Nutrition Plans</h2>
                 <hr class="w-50 mb-1">
+                <p class=""></p>
             </div>
         </div>
         <div class="row">
@@ -42,7 +43,6 @@
                                 <div class="card-footer bg-white pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col">
-                                            <p class="lead mb-0 text-left font-weight-bold">${{ meal.price }}</p>
                                             {% if meal.category %}
                                             <p class="small mt-1 mb-0">
                                                 <a class="text-muted"
@@ -50,13 +50,6 @@
                                                     <i class="fas fa-tag mr-1"></i>{{ meal.category.friendly_name }}
                                                 </a>
                                             </p>
-                                            {% endif %}
-                                            {% if meal.rating %}
-                                            <small class="text-muted"><i
-                                                    class="fas fa-star mr-1"></i>{{ meal.rating }} /
-                                                5</small>
-                                            {% else %}
-                                            <small class="text-muted">No Rating</small>
                                             {% endif %}
                                         </div>
                                     </div>
