Removed exercise plans and built new app workouts

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -275,7 +275,7 @@ input[name='q']::placeholder {
     flex-wrap: wrap;
 }
 
-.exercise-card {
+.workout-card {
     display: flex;
     justify-content: center;
     border: 1px solid black;
