--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -38,8 +38,8 @@
     </li>
 
      <li class="nav-item">
-      <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'exercise' %}?category=exercise" >
-        Exercise Plans
+      <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'workout' %}">
+        Workouts
       </a>
      
     </li>
