added price model to nutrition plans

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -37,6 +37,12 @@
       </div>
     </li>
 
+    <li class="nav-item">
+    <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'meals' %}">
+        Nutrition Plans
+    </a>
+    </li>
+
      <li class="nav-item">
       <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'workout' %}">
         Workouts
@@ -44,15 +50,6 @@
      
     </li>
 
-
-    <li class="nav-item">
-      <a
-        class="logo-font font-weight-bold nav-link text-black mr-5"
-        href="{% url 'meals' %}">
-        Nutrition Plans
-      </a>
-    
-    </li>
      <li class="nav-item">
          <a class="logo-font font-weight-bold nav-link text-black" href="{% url 'post_list' %}">Blogs</a>
      </li>
