--- a/nutrition_plans/templates/meals/nutrition_plans.html
+++ b/nutrition_plans/templates/meals/nutrition_plans.html
@@ -46,8 +46,8 @@
                                             {% if meal.category %}
                                             <p class="small mt-1 mb-0">
                                                 <a class="text-muted"
-                                                    href="{% url 'meal' %}?category={{ meal.category.name }}">
-                                                    <i class="fas fa-tag mr-1"></i>{{ meal.category.friendly_name }}
+                                                    href="{% url 'meal' %}">
+                                                    <i class="fas fa-tag mr-1"></i>{{ meal.name }}
                                                 </a>
                                             </p>
                                             {% endif %}
@@ -58,14 +58,6 @@
                                      <div class="row">
                                          <div class="col">
                                              <p class="lead mb-0 text-left font-weight-bold">${{ meal.price }}</p>
-                                             {% if meal.category %}
-                                             <p class="small mt-1 mb-0">
-                                                 <a class="text-muted"
-                                                     href="{% url 'meal' %}">
-                                                     <i class="fas fa-tag mr-1"></i>{{ meal.category.friendly_name }}
-                                                 </a>
-                                             </p>
-                                             {% endif %}
                                              {% if meal.rating %}
                                              <small class="text-muted"><i
                                                      class="fas fa-star mr-1"></i>{{ meal.rating }} /
