--- a/nutrition_plans/templates/meals/nutrition_plans.html
+++ b/nutrition_plans/templates/meals/nutrition_plans.html
@@ -46,7 +46,7 @@
                                             {% if meal.category %}
                                             <p class="small mt-1 mb-0">
                                                 <a class="text-muted"
-                                                    href="{% url 'meal' %}">
+                                                    href="{% url 'meals' %}">
                                                     <i class="fas fa-tag mr-1"></i>{{ meal.name }}
                                                 </a>
                                             </p>
