--- a/nutrition_plans/templates/meals/nutrition_detail.html
+++ b/nutrition_plans/templates/meals/nutrition_detail.html
@@ -29,9 +29,8 @@
         <div class="col-12 col-md-6 col-lg-4">
             <div class="meal-details-container mb-5 mt-md-5">
                 <p class="mb-0">{{ meal.name }}</p>
-                <p class="lead mb-0 text-left font-weight-bold">${{ meal.price }}</p>
                 <p class="mt-3">{{ meal.description }}</p>
-                  <form class="form" action="{% url 'add_to_bag' meal.id %}" method="POST">
+                  <form class="form" action="{% url 'add_to_bag' meal.id True %}" method="POST">
                       {% csrf_token %}
                       <div class="form-row">
                           <div class="col-12">
