Properly positioned footer from home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -10,8 +10,8 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container h-100">
-        <div class="row h-100">
+    <div class="container">
+        <div class="row">
             <div class="col-12 ">
                 <h1 class="display-4 logo-font text-black text-intro">
                <h3 class="mt-3 text-center">Welcome to Fitness Galore, your ultimate destination for a healthier and happier you. </h3> 
