deployment in process

--- a/contact/templates/contact/success_page.html
+++ b/contact/templates/contact/success_page.html
@@ -11,7 +11,8 @@
 {% endblock %}
 
 {% block content %}
-<h2 class="text-center">Thank you for contacting us! We'll get back to you shortly.</h2>
 
+<h2 class="text-center">Thank you for contacting us! We'll get back to you shortly.</h2>
+<hr class="w-50 mb-1">
 
 {% endblock %}
