--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-12 ">
                 <h1 class="display-4 logo-font text-black text-intro">
-               <h3 class="mt-3 text-center">Welcome to Fitness Galore, your ultimate destination for a healthier and happier you. </h3> 
+               <h3 class="mt-3 text-center">Welcome to Fitness Galore, your ultimate destination for a healthier and happier you! </h3> 
                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                   <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
