changed image on home page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,7 +26,7 @@
                     <img src="static/images/dumbells.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="static/images/skipping rope.jpg" class="d-block w-100" alt="...">
+                    <img src="static/images/dead-lifting.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
                     <img src="static/images/gym equipment.jpg" class="d-block w-100" alt="...">
