--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,13 +23,13 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="static/images/dumbells.jpg" class="d-block w-100" alt="...">
+                    <img src="media/dumbells.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="static/images/dead-lifting.jpg" class="d-block w-100" alt="...">
+                    <img src="media/dead-lifting.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="static/images/gym-equipment.jpg" class="d-block w-100" alt="...">
+                    <img src="media/gym-equipment.jpg" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
