--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,7 +6,7 @@ body {
     background: url('/media/dead-lifting.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(60vh - 54px);
-    color: #555;
+    color: #eeeeee;
     font-family: 'Lato';
     min-height: 100vh;
 }
