--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: url('/media/dead-lifting.jpg') no-repeat center center fixed;
+    background: url('/media/gym-equipment.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(60vh - 54px);
     color: #eeeeee;
