--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,10 +3,9 @@ html {
 }
 
 body {
-    background: url('/media/wakeup_workout.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(20vh);
-    color: #f9f9f9;
+    color: #000000;
     font-family: 'Lato';
     min-height: 100vh;
 }
