--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,15 +2,13 @@
 {% load static %}
 
 {% block page_header %}
-    <div class="container header-container">
         <div class="row">
             <div class="col"></div>
         </div>
-    </div>
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container-fluid"></div>
         <div class="row">
             <div class="col-12 ">
                 <h1 class="display-4 logo-font text-black text-intro">
