--- a/static/css/base.css
+++ b/static/css/base.css
@@ -283,6 +283,14 @@ input[name='q']::placeholder {
     
 }
 
+/* -------------------------------- Media Queries */
+
+/* Slightly larger container on xl screens */
+@media (min-width: 1200px) {
+    .container {
+      max-width: 80%;
+    }
+  }
 
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
