--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -33,7 +33,6 @@
     <a
       class="text-black nav-link d-block d-lg-none"
       href="#"
-      id="user-options"
       data-toggle="dropdown"
       aria-haspopup="true"
       aria-expanded="false"
@@ -49,7 +48,7 @@
         >Product Management</a
       >
       {% endif %}
-      <a href="" class="dropdown-item">My Profile</a>
+      <a href="#" class="dropdown-item">My Profile</a>
       <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
       {% else %}
       <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
