--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,10 +8,9 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container-fluid"></div>
+    <div class="container-fluid">
         <div class="row">
             <div class="col-12 ">
-                <h1 class="display-4 logo-font text-black text-intro">
                <h3 class="mt-3 text-center">Welcome to Fitness Galore, your ultimate destination for a healthier and happier you! </h3> 
                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -53,6 +52,7 @@
                       </div>
                       <div class="col">
                         <h4 class="">Our Reviews</h4>
+                        <p>
                         Review Title: "A Fitness Paradise!"
                         Rating: ★★★★★
 
