--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,6 @@
 
     <title>Fitness Galore {% block extra_title %}{% endblock %}</title>
 </head>
-
 <body>
     <header class="container-fluid">
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
@@ -67,13 +66,10 @@
                     </div>
                 </form>
             </div>
-
-         
-       
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <li class="list-inline-item dropdown">
-                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown"
+                        <a class="text-black nav-link" href="#" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
                                 <div><i class="fas fa-user fa-lg"></i></div>
