--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,13 +20,13 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="{{ MEDIA_URL }}/dumbells.jpg" class="d-block w-100" alt="...">
+                    <img src="{{ MEDIA_URL }}dumbells.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="{{ MEDIA_URL }}/dead-lifting.jpg" class="d-block w-100" alt="...">
+                    <img src="{{ MEDIA_URL }}dead-lifting.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="{{ MEDIA_URL }}/gym-equipment.jpg" class="d-block w-100" alt="...">
+                    <img src="{{ MEDIA_URL }}gym-equipment.jpg" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
